    - defragmentaion of additional streams attached to NTFS files was added 
    - information about trash (temporary files) excluded from reports,
      statistics and cluster map; these files are completely ignored now
    - a lot of new options were added to the console program
    - the \??\ sequence removed from file names in reports
    - Thai translation was made
    - Scheduler was rewritten in C language; NET framework is not required now!
    - ability to translate Scheduler into foreign languages was added
    - GUI options were moved from udefrag-gui.cmd script to 
      easy to understand guiopts.lua file
    - NOTE FOR PROGRAMMERS: to successfully recompile the driver run 
      configure.pl script and click 'Apply patch to MinGW' button once


  Version 3.1.0 (33.0)   2009-05-13
  ------------------------------------------------------------------------------
    - this is the first really stable release
    - graphical interface was completely rewritten
    - gui program was translated into the following languages:

      Danish, Farsi, Swedish, Turkish

    - a lot of GUI bugs were fixed
    - very important driver bugs were fixed


  Version 3.0.0 (29.5)   2009-03-15
  ------------------------------------------------------------------------------
    - defragmentation algorithm was completely rewritten to be more effective
    - free space optimization algorithm was completely rewritten 
      to be more effective
    - a lot of important bugs were fixed

                                    ***

  Version 2.1.2 (30.0)   2009-02-18
  ------------------------------------------------------------------------------
    - few important bugs were fixed


  Version 2.1.1 (30.0)   2009-02-16
  ------------------------------------------------------------------------------
    - Japanese translation was made
    - column widths in GUI are now adjustable
    - processor architecture check was added to installer
    - most known bugs were fixed

