@@ -56,7 +56,7 @@
 				</div>
 			</div>
 
-			<div>Revision <span class="releaseinfo">3.1.0 (<span class="date">2009-04-01</span>)</span></div>
+			<div>Revision <span class="releaseinfo">3.2.0 (<span class="date">2009-09-07</span>)</span></div>
 
 			<div>
 				<p class="copyright">
@@ -91,6 +91,7 @@
 				<dt><span class="sect1"><a href="introduction.html#fs">Supported file systems</a></span></dt>
 				<dt><span class="sect1"><a href="introduction.html#platforms">Supported operating systems</a></span></dt>
 				<dt><span class="sect1"><a href="introduction.html#algorithm">Defragmentation algorithm</a></span></dt>
+				<dt><span class="sect1"><a href="introduction.html#web">Web resources</a></span></dt>
 			</dl></dd>
 
 			<dt><span class="chapter"><a href="installation.html">2. Installation</a></span></dt>
@@ -145,6 +146,12 @@
 			<dt><span class="chapter"><a href="faq.html">10. Frequently Asked Questions</a></span></dt>
 			
 			<dt><span class="chapter"><a href="reporting_bugs.html">11. Reporting bugs</a></span></dt>
+			
+			<dd><dl>
+				<dt><span class="sect1"><a href="reporting_bugs.html#intro">Introduction</a></span></dt>
+				<dt><span class="sect1"><a href="reporting_bugs.html#driver">Kernel mode driver debugging</a></span></dt>
+				<dt><span class="sect1"><a href="reporting_bugs.html#gui">Which info must contain a report about GUI bug?</a></span></dt>
+			</dl></dd>
 			
 			<dt><span class="chapter"><a href="credits.html">12. Credits and License</a></span></dt>
 
