@@ -60,6 +60,10 @@
 				<span class="sect1"><a href="introduction.html#algorithm">
 				Defragmentation algorithm</a></span>
 			</dt>
+			<dt>
+				<span class="sect1"><a href="introduction.html#web">
+				Web resources</a></span>
+			</dt>
 		</dl>
 	</div>
 	
@@ -99,6 +103,7 @@
 		in Explorer and choose the appropriate context menu item to defragment them.</li>
 		<li>Very small engine written in pure C.</li>
 		<li>Nice graphical interface - compact, functional and easy to use.</li>
+		<li>Powerful command line interface.</li>
 		<li>Safety, because the file moving is accomplished with Microsoft's own Defrag API.</li>
 		<li>Simple to use.</li>
 		<li>Ability to generate html reports of fragmentation status.</li>
@@ -138,6 +143,8 @@
 			Because NTFS driver provided by Microsoft is very imperfect. Such 
 			internal files defragmentation support may be added in future versions of 
 			<span class="application">UltraDefrag</span>.</p>
+			<p><span class="application">UltraDefrag</span> cannot defragment volumes containing 
+			more than 4.294.967.295 clusters.</p>
 		</div>
 	</div>
 
@@ -228,6 +235,29 @@
 			algorithms. The new algorithms described here are much faster, effective 
 			and reliable!</p>
 		</div>
+	</div>
+
+	<div class="sect1" lang="en">
+		<div class="titlepage">
+			<div><div>
+				<h2 class="title" style="clear: both"><a name="web"></a>
+				Web resources</h2>
+			</div></div>
+		</div>
+		<p style="text-align:left">The Ultra Defragmenter's home page is at: 
+
+		<a href="http://ultradefrag.sourceforge.net">http://ultradefrag.sourceforge.net</a></p>
+
+		<p style="text-align:left">Please be sure to visit this site for information, documentation, tutorials, 
+		news, etc.  All Ultra Defragmenter related things are available from there.</p>
+
+		<p style="text-align:left">For help requests visit our forum: 
+
+		<a href="http://ultradefrag.sourceforge.net/forum">http://ultradefrag.sourceforge.net/forum</a></p>
+		
+		<p style="text-align:left">Please report all problems and bugs via our bug tracker: 
+
+		<a href="http://ultradefrag.sourceforge.net/bugs">http://ultradefrag.sourceforge.net/bugs</a></p>
 	</div>
 </div>
 
