@@ -58,6 +58,9 @@
 		To browse list of all scheduled tasks use the following menu: 
 		<span class="guimenuitem">Start > Settings > Control Panel > Scheduled Tasks</span>.
 		</p>
+		<p>UltraDefrag Scheduler requires <span class="code">comctl32.dll</span> module version 4.70 or higher 
+		to run, therefore you will be able to execute it on Windows 2000 and later systems.
+		</p>
 	</div>
 </div>
 
