@@ -12,10 +12,14 @@ HISTORY
     - a lot of new options were added to the console program
     - the \??\ sequence removed from file names in reports
     - Thai translation was made
+    - some important parts of handbook were completely rewritten
     - Scheduler was rewritten in C language; NET framework is not required now!
     - ability to translate Scheduler into foreign languages was added
     - GUI options were moved from udefrag-gui.cmd script to 
       easy to understand guiopts.lua file
+    - debugging information will not be saved on disk since this version of the 
+      program; read carefully an appropriate chapter of program's handbook for 
+      detailed instructions about kernel mode driver debugging instead
     - NOTE FOR PROGRAMMERS: to successfully recompile the driver run 
       configure.pl script and click 'Apply patch to MinGW' button once
 
